Add Contextual TOC

--- a/support/azure/azure-storage/files/toc.yml
+++ b/support/azure/azure-storage/files/toc.yml
@@ -4,7 +4,7 @@
 - name: Alerts, Metrics and Logging
   items:
   - name: Create file share throttling alerts
-    href: /azure/storage/files/files-monitoring-alerts
+    href: /azure/storage/files/files-monitoring-alerts?context=/troubleshoot/azure/azure-storage/files/context/context
 - name: Backup and Restore
   items:
   - name: Troubleshoot backing up file shares
