--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -304,7 +304,9 @@
     - name: Audio issues when using Teams on macOS
       href: ./teams-on-mac/teams-audio-issue-mac.md
     - name: Incorrect presence status in Teams for Mac
-      href: ./teams-on-mac/incorrect-presence-status-teams-for-mac.md  
+      href: ./teams-on-mac/incorrect-presence-status-teams-for-mac.md
+    - name: Teams-specific notification sound reverts to macOS notification sound
+      href: ./teams-on-mac/teams-notification-sound-reverts-to-default.md
   - name: Teams on Windows
     items:
     - name: Error when calling from a contact card
