--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -26,7 +26,7 @@
       href: email-exchange-synchronization/error-occurs-sending-email-for-mailbox.md
     - name: An unknown error when sending email messages
       href: email-exchange-synchronization/error-while-sending-the-email-message.md
-    - name: Appointment aren't synchronized to Exchange or Outlook
+    - name: Appointments aren't synchronized to Exchange or Outlook
       href: email-exchange-synchronization/appointments-do-not-synchronize-to-exchange-or-outlook.md
     - name: Appointments don't sync to Exchange for some users
       href: email-exchange-synchronization/appointments-do-not-sync-to-exchange-for-some-users.md
