--- a/support/azure/app-service/scaling-web-app-faq.yml
+++ b/support/azure/app-service/scaling-web-app-faq.yml
@@ -4,7 +4,7 @@ metadata:
   description: Describe common questions and answers about scaling in Azure App Service.
   services: app-service
   author: auolivei
-  ms.reviewer: amehrot, rimarr, genli
+  ms.reviewer:  genli
   ms.topic: faq
   ms.date: 08/03/2022
   ms.author: auolivei
