--- a/support/dynamics-365/finance/toc.yml
+++ b/support/dynamics-365/finance/toc.yml
@@ -32,6 +32,8 @@
       href: business-performance-analytics/missing-budget-transaction-header-err00007.md
     - name: Missing foreign key reference ERR00008
       href: business-performance-analytics/missing-foreign-key-err0008.md
+    - name: Output table is empty ERR00016
+      href: business-performance-analytics/empty-entities-err00016.md
 - name: Cash and bank management
   items:
     - name: Troubleshoot issues with transactions that can't be settled
