--- a/support/azure/app-service/scaling-web-app-faq.yml
+++ b/support/azure/app-service/scaling-web-app-faq.yml
@@ -77,8 +77,9 @@ sections:
           The file change audit logs "AppServiceFileAuditLogs" are only available for App Services in Premium, PremiumV2, and Isolated App Service Plans. If you need "AppServiceFileAuditLogs," you won't be able to scale down to the Basic tier. To have these audit logs available, configure your App Service Plan for Premium or higher tier. 
 
       - question: |
-          I'm seeing the error: "App Service Plans with fewer than 3 workers aren't allowed for zone redundancy. Requested number of workers: xxxx" What should I do?
-        answer: | [Availability zone support](/azure/reliability/reliability-app-service#availability-zone-support) requires at least 3 instances. Verify if the App Service Plan has zone redundancy enabled and if you have auto scale on the App Service Plan. If yes, correct the auto scale rule to not set the number of instances to a value less than 3.
+          I'm getting the error: "App Service Plans with fewer than 3 workers aren't allowed for zone redundancy. Requested number of workers: xxxx" What should I do?
+        answer: |
+          [Availability zone support](/azure/reliability/reliability-app-service#availability-zone-support) requires at least 3 instances. Verify if the App Service Plan has zone redundancy enabled and if you have auto scale on the App Service Plan. If yes, correct the auto scale rule to not set the number of instances to a value less than 3.
 
 
           [!INCLUDE [Azure Help Support](../../includes/azure-help-support.md)]
