--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -84,6 +84,8 @@
       href: email-exchange-synchronization/error-when-testing-enabling-mailbox.md
     - name: The SMTP address has no mailbox associated with it
       href: email-exchange-synchronization/the-smtp-address-has-no-mailbox.md
+    - name: UnknownIncomingEmailIntegrationError
+      href: email-exchange-synchronization/exception-appears-server-side-sync.md
     - name: unknownincomingemailintegrationerror -2147220891
       href: email-exchange-synchronization/unknownincomingemailintegrationerror-2147220891.md
     - name: '"You cannot send email as the selected user" error'
