--- a/support/dynamics-365/customer-service/toc.yml
+++ b/support/dynamics-365/customer-service/toc.yml
@@ -158,14 +158,14 @@
           href: omnichannel-for-customer-service/instance-unavailable-provision-omnichannel.md
         - name: Omnichannel provisioning fails with an error
           href: omnichannel-for-customer-service/omnichannel-provision-fail-errors.md
-    - name: Copilot Studio
+    - name: Agents in Copilot Studio
       items:
-        - name: Can't publish Copilot Survey bot due to an error with Conversation Start topic
-          href: omnichannel-for-customer-service/cannot-refernce-variable-publish-copilot-survey-bot.md
+        - name: Error in Conversation Start topic prevents publish of survey agent
+          href: omnichannel-for-customer-service/error-in-conversation-start-topic.md
         - name: Copilot Studio bot conversations are active after a chat ends
-          href: omnichannel-for-customer-service/pva-conversations-active-dashboard.md  
+          href: omnichannel-for-customer-service/pva-conversations-active-dashboard.md
         - name: Missing variables and actions when agent transfers from Copilot Studio bots
-          href: omnichannel-for-customer-service/agent-transfer-pva-bot-issue.md          
+          href: omnichannel-for-customer-service/agent-transfer-pva-bot-issue.md
     - name: Omnichannel dashboards
       items:
         - name: Agent dashboard shows authentication error after provisioning
