--- a/support/dynamics-365/customer-service/toc.yml
+++ b/support/dynamics-365/customer-service/toc.yml
@@ -158,13 +158,13 @@
           href: omnichannel-for-customer-service/instance-unavailable-provision-omnichannel.md
         - name: Omnichannel provisioning fails with an error
           href: omnichannel-for-customer-service/omnichannel-provision-fail-errors.md
-    - name: Agents in Copilot Studio
+    - name: Copilot Studio agents
       items:
         - name: Error in Conversation Start topic prevents publish of survey agent
           href: omnichannel-for-customer-service/error-in-conversation-start-topic.md
         - name: Copilot Studio agent conversations are active after a chat ends
           href: omnichannel-for-customer-service/pva-conversations-active-dashboard.md
-        - name: Missing variables and actions when agent transfers from Copilot Studio agents
+        - name: Missing variables and actions in transfers from Copilot Studio agents to service reps
           href: omnichannel-for-customer-service/agent-transfer-pva-bot-issue.md
     - name: Omnichannel dashboards
       items:
