--- a/support/sql/releases/toc.yml
+++ b/support/sql/releases/toc.yml
@@ -99,6 +99,9 @@ items:
   items:
   - name: SQL Server 2019 build versions
     href: sqlserver-2019/build-versions.md
+  - name: Cumulative Update 30
+    - name: Cumulative Update 30 (KB5049235)
+      href: sqlserver-2019/cumulativeupdate30.md
   - name: Cumulative Update 29
     items:
     - name: Cumulative Update 29 (KB5046365)
