--- a/support/power-platform/power-automate/toc.yml
+++ b/support/power-platform/power-automate/toc.yml
@@ -168,7 +168,7 @@
       href: desktop-flows/temporary-profile-error-machine-registration.md
     - name: 'UnallowedTenantForConnectWithSignIn or connection errors when using "connect with sign-in"'
       href: desktop-flows/troubleshoot-unallowed-tenant-for-connect-with-sign-in.md
-    - name: Unattended desktop flow run fails with MSEntraMachineAlwaysPromptingForPassword
+    - name: Unattended desktop flow fails with MSEntraMachineAlwaysPromptingForPassword
       href: desktop-flows/msentramachinealwayspromptingforpassword-error.md
 - name: Flow creation
   items:
