--- a/Viva/Glint/toc.yml
+++ b/Viva/Glint/toc.yml
@@ -21,6 +21,8 @@
           href: ./data-file-upload/fix-upload-invalid-unexpected-values-warnings.md
         - name: Resolve upload warnings related to manager hierarchy
           href: ./data-file-upload/fix-upload-manager-hierarchy-warnings.md
+        - name: Resolve upload errors and warnings related to employee ID updates
+          href: ./data-file-upload/fix-employee-id-updates-errors-warnings.md
     - name: Historical imports
       items:
         - name: Error "Duplicate entry"
