Created error code section and included VMextension related TSGs

--- a/support/azure/azure-kubernetes/toc.yml
+++ b/support/azure/azure-kubernetes/toc.yml
@@ -354,3 +354,13 @@
       href: extensions/troubleshoot-kubernetes-event-driven-autoscaling-add-on.md
     - name: Breaking changes in KEDA add-on 2.15 and 2.14
       href: extensions/changes-in-kubernetes-event-driven-autoscaling-add-on-214-215.md
+  - name: Troubleshoot by Error codes 
+    items:
+    - name: VMExtensionError_CniDownloadTimeout error
+      href: error-codes/VMExtensionError_CniDownloadTimeout.md
+    - name: VMExtensionError_OutboundConnFail error
+      href: error-codes/VMExtensionError_OutboundConnFail.md
+    - name: VMExtensionError_K8SAPIServerConnFail error
+      href: error-codes/VMExtensionError_K8SAPIServerConnFail.md
+    - name: VMExtensionError_K8SAPIServerDNSLookupFail error
+      href: error-codes/VMExtensionError_K8SAPIServerDNSLookupFail.md
