--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -42,8 +42,6 @@
       href: email-exchange-synchronization/email-fails-to-create-with-norecipientmatch-error.md
     - name: Email fails to create with NoCorrelationMatch sync
       href: email-exchange-synchronization/email-fails-to-create-with-nocorrelationmatch-error.md
-    - name: Email message can't be sent because the mailbox is deactivated
-      href: email-exchange-synchronization/email-message-cannot-be-sent.md
     - name: Email server location or incoming email port is incorrect
       href: email-exchange-synchronization/email-cannot-be-received-mailbox.md
     - name: Error 2147209462 logged in mailbox record
@@ -72,6 +70,8 @@
       href: email-exchange-synchronization/http-server-returned-forbidden-exception.md
     - name: Incoming emails are unexpectedly synchronized
       href: email-exchange-synchronization/incoming-emails-unexpectedly-synchronized-have-unexpected-missing-data.md
+    - name: MailboxDisabled error when testing and enabling a mailbox
+      href: email-exchange-synchronization/email-message-cannot-be-sent.md
     - name: Mailbox user doesn't have sufficient permissions error
       href: email-exchange-synchronization/error-when-you-test-enable-a-mailbox.md
     - name: Mailbox doesn't have an email server profile
