--- a/support/dynamics-365/customer-service/toc.yml
+++ b/support/dynamics-365/customer-service/toc.yml
@@ -162,7 +162,7 @@
       items:
         - name: Copilot Studio agent conversations are active after a chat ends
           href: omnichannel-for-customer-service/pva-conversations-active-dashboard.md
-        - name: Error in Conversation Start topic prevents publish of survey agent
+        - name: Error in Conversation Start topic prevents survey agent from publishing
           href: omnichannel-for-customer-service/error-in-conversation-start-topic.md
         - name: Missing variables and actions in transfers from Copilot Studio agents to service representatives
           href: omnichannel-for-customer-service/agent-transfer-pva-bot-issue.md
