--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -14,6 +14,8 @@
   items:
     - name: 401 Unauthorized exception when using Server-Side Synchronization
       href: email-exchange-synchronization/exception-when-using-server-side-sync.md
+    - name: An error occurred while creating the incoming email
+      href: email-exchange-synchronization/error-when-creating-an-incoming-email.md
     - name: An appointment is canceled or deleted during server-side synchronization
       href: email-exchange-synchronization/an-appointment-is-canceled-deleted.md
     - name: A failure occurred in CrmSecurity when approving email address
@@ -58,8 +60,6 @@
       href: email-exchange-synchronization/error-code-8005e274.md
     - name: Error code 8005E276
       href: email-exchange-synchronization/error-code-8005e276.md
-    - name: Error when creating the incoming email
-      href: email-exchange-synchronization/error-when-creating-an-incoming-email.md
     - name: Error while synchronizing appointments, contacts, and tasks
       href: email-exchange-synchronization/an-internal-dynamics-365-error.md
     - name: ErrorQuotaExceeded. Exchange.server returned 403 error
