--- a/support/dynamics-365/field-service/toc.yml
+++ b/support/dynamics-365/field-service/toc.yml
@@ -56,9 +56,9 @@
 
 - name: Mobile app - New experience
   items: 
-    - name: Error on start due to permission or privilege issues
+    - name: Error on startup due to permission or privilege issues
       href: mobile-app/newux-error-on-start-permission.md
-    - name: Error on start due to missing files in the solution
+    - name: Error on startup due to missing files in the solution
       href: mobile-app/newux-error-on-start-missing-files.md
 
 - name: Resource Scheduling Optimization add-in
