--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -207,8 +207,10 @@ items:
       href: ./active-directory/duplicate-active-directory-replication-connections.md
     - name: How to restrict RPC traffic to a specific port
       href: ./active-directory/restrict-ad-rpc-traffic-to-specific-port.md
-    - name: lingering objects in a Windows Server Active Directory forest
+    - name: Lingering objects in a Windows Server Active Directory forest
       href: ./active-directory/information-lingering-objects.md
+    - name: Lingering objects still remain
+      href: ./active-directory/lingering-objects-remain-dc-gc-back.md
     - name: Manually replicating data between domain controllers fails
       href: ./active-directory/target-principal-name-is-incorrect-when-replicating-data.md
     - name: Modify the default intra-site DC replication interval
