--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -209,8 +209,8 @@ items:
       href: ./active-directory/restrict-ad-rpc-traffic-to-specific-port.md
     - name: Lingering objects in a Windows Server Active Directory forest
       href: ./active-directory/information-lingering-objects.md
-    - name: Lingering objects still remain
-      href: ./active-directory/lingering-objects-remain-dc-gc-back.md
+    - name: Lingering objects manual removal
+      href: ./active-directory/manually-remove-lingering-objects.md
     - name: Manually replicating data between domain controllers fails
       href: ./active-directory/target-principal-name-is-incorrect-when-replicating-data.md
     - name: Modify the default intra-site DC replication interval
