--- a/support/sql/releases/toc.yml
+++ b/support/sql/releases/toc.yml
@@ -17,6 +17,12 @@ items:
   items:
   - name: SQL Server 2022 build versions
     href: sqlserver-2022/build-versions.md
+  - name: Cumulative Update 17
+    items:
+    - name: Cumulative Update 17 (KB5048038)
+      href: sqlserver-2022/cumulativeupdate17.md
+    - name: 'Improvement: Microsoft Entra managed identity support for backup and restore database operations and for EKM with AKV in SQL Server on Azure VMs'
+      href: sqlserver-2022/microsoft-entra-managed-identity-support-for-backup-restore-database-ekm-akv.md
   - name: Cumulative Update 16
     items:
     - name: Cumulative Update 16 (KB5048033)
