--- a/support/azure/virtual-machines/windows/windows-virtual-machine-activation-faq.yml
+++ b/support/azure/virtual-machines/windows/windows-virtual-machine-activation-faq.yml
@@ -36,9 +36,9 @@ sections:
           When the grace period expires and Windows is still not activated, Windows Server 2008 R2 and later versions of Windows show more notifications about activating. The desktop wallpaper remains black, and Windows Update installs security and critical updates only, but it doesn't install optional updates. See the *Notifications* section at the bottom of the [Licensing Conditions](/previous-versions/tn-archive/ff793403(v=technet.10)) page.
 
       - question: |
-          Is my memory limited to 2 GB when the Windows machine isn't activated?
+          My memory is limited to 2 GB on a new Windows Server VM
         answer: |
-          Yes, you need to activate your Windows machine to access all the available memory.
+          You need to activate your Windows Server VM to access all the available memory.
           
 additionalContent: |
   ## More information
