--- a/support/azure/virtual-machines/linux/toc.yml
+++ b/support/azure/virtual-machines/linux/toc.yml
@@ -179,6 +179,9 @@
     href: vfat-disabled-boot-issues.md
   - name: VM fails to boot and lands in dracut emergency shell
     href: linux-no-boot-dracut.md
+  - name: VM fails to boot due wrong amount of HugePages
+    href: linux-vm-no-booting-due-HP-issue.md
+          
 
 - name: Cannot start or stop my VM
   items:
