--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -84,7 +84,7 @@
       href: email-exchange-synchronization/error-when-testing-enabling-mailbox.md
     - name: The SMTP address has no mailbox associated with it
       href: email-exchange-synchronization/the-smtp-address-has-no-mailbox.md
-    - name: UnknownIncomingEmailIntegrationError -2147220891
+    - name: UnknownIncomingEmailIntegrationError -2147220891 or Crm.80040265.ISV
       href: email-exchange-synchronization/unknownincomingemailintegrationerror-2147220891.md
     - name: '"You cannot send email as the selected user" error'
       href: email-exchange-synchronization/cannot-send-email-as-another-user.md
