--- a/support/azure/virtual-machines/linux/toc.yml
+++ b/support/azure/virtual-machines/linux/toc.yml
@@ -179,8 +179,8 @@
     href: vfat-disabled-boot-issues.md
   - name: VM fails to boot and lands in dracut emergency shell
     href: linux-no-boot-dracut.md
-  - name: VM fails to boot due wrong amount of HugePages
-    href: linux-vm-no-booting-due-HP-issue.md
+  - name: VM fails to boot due to incorrect HugePages configuration
+    href: linux-vm-no-boot-incorrect-hugepages-configuration.md
           
 
 - name: Cannot start or stop my VM
