--- a/support/azure/index.yml
+++ b/support/azure/index.yml
@@ -109,6 +109,15 @@ productDirectory:
       text: Troubleshooting articles for Azure CycleCloud
     - url: hpc/pack/welcome-hpc-pack.yml
       text: Troubleshooting articles for Azure HPC Pack
+  - title: Microsoft Graph Users, Groups, and Entra APIs
+    imageSrc: "https://static.docs.com/ui/media/product/azure/container-registry.svg"
+    links:
+    - url: hpc/batch/welcome-hpc-batch.yml
+      text: Troubleshooting articles for Azure Batch
+    - url: hpc/cyclecloud/welcome-hpc-cyclecloud.yml
+      text: Troubleshooting articles for Azure CycleCloud
+    - url: hpc/pack/welcome-hpc-pack.yml
+      text: Troubleshooting articles for Azure HPC Pack
   - title: Site Recovery
     imageSrc: "https://static.docs.com/ui/media/product/azure/recovery-services-vaults.svg"
     links:
