--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -92,6 +92,8 @@
       href: email-exchange-synchronization/error-2147209462-logged-mailbox-record.md
     - name: UnknownIncomingEmailIntegrationError -2147220891 or Crm.80040265.ISV
       href: email-exchange-synchronization/unknownincomingemailintegrationerror-2147220891.md
+    - name: UnknownIncomingEmailIntegrationError -2147220956 and other errors
+      href: email-exchange-synchronization/exception-appears-server-side-sync.md
     - name: '"You cannot send email as the selected user" error'
       href: email-exchange-synchronization/cannot-send-email-as-another-user.md
 - name: Plug-in execution
